--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
   <title>I've smelled the blood, that touches my tongue.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://kabk.github.io/go-theses-21-eunjin-ahn" rel="stylesheet" />
+  <link href="https://kabk.github.io/go-theses-21-eunjin-ahn/index.css" rel="stylesheet" />
 <script src="jquery-3.5.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
