--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="style.css">
 <script src="jquery-3.5.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="javascript-file.js"></script>
+<script src="https://kabk.github.io/go-theses-21-eunjin-ahn/javascript-file.js"></script>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔪</text></svg>">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -39,14 +40,14 @@
 
   <div class="left">
 <div class="title">
-  <i>I've<br>
-  Smelled<br>
-  the Blood,<br>
-  That<br>Touches<br>My Tongue.</i>
+  I've
+  Smelled
+  the Blood,
+  That Touches My Tongue.
 </div>
 
 <div class="name">
-  <i>Eunjin Ahn, KABK 2021</i>
+  Eunjin Ahn, KABK 2021
 </div>
 </div>
 <div class="middle">
@@ -63,7 +64,6 @@
         we look at horror movies and create an opportunity to think about new directions for horror movies to move forward. Furthermore, I would like to ask what attitude and responsibility we should have as artists through this research.
         <br>
       </div>
-
       <h1 class="flip">
         Introduction
         <h1>
