--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 <div class="content">
   <h1 class="flip">Abstract<h1>
       <div class="panel">
-        <img src="https://i.imgur.com/PiQQBWE.jpg" width="80%" class="responsive"><br><br>
+        <img src="https://i.imgur.com/PiQQBWE.jpg" width="99%" class="responsive"><br>
+        <div class="note">Sally of The Texas Chain Saw Massacre (1974)
+
+                        </div><br>
         I loved horror movies since I was a kid. But from a certain point, it was so disturbing to watch horror films so I stopped and it took a long time to be able to watch them again. In horror movies mostly women are hit, raped and killed
         or they are just a monster. Is it possible to be a feminist and horror film fan at the same time?
 
@@ -68,14 +71,12 @@
         Introduction
         <h1>
           <div class="panel">
-            <div align=center>
-              <img src="https://i.imgur.com/l10gPIy.jpg" width="49.5%" class="responsive">
-              <img src="https://i.imgur.com/8Xq1txJ.jpg" width="49.5%" class="responsive"><br>
-              <img src="https://i.imgur.com/sIlrr0b.jpg" width="100%" class="responsive"><br>
-              <font class="note"><i>Poster of The Texas Chain Saw Massacre (1974), Poster of The House on Sorority Row (1982),
-                  The Nail Gun Massacre (1985)
 
-                </i></font>
+              <img src="https://i.imgur.com/l10gPIy.jpg" width="49%" class="responsive">
+              <img src="https://i.imgur.com/8Xq1txJ.jpg" width="49%" class="responsive"><br>
+              <img src="https://i.imgur.com/sIlrr0b.jpg" width="99%" class="responsive"><br>
+              <div class="note">Poster of The Texas Chain Saw Massacre (1974), Poster of The House on Sorority Row (1982),
+                  The Nail Gun Massacre (1985)
             </div>
             <br>
             It takes a lot of excuses to explain why you love horror movies. Since <i>L'arrivée d'un train en gare de La Ciotat</i>(1896), many genres have been
@@ -99,15 +100,13 @@
             consume it sexually. Unnecessary sexual scenes or shower scenes are the good examples. The way female characters are depicted in horror films is not much different from the way women are fetishized in pornography. Sex and horror are
             inseparable relationships, especially in pornographic horrors and slasher subgenres.<br>
             <br><br>
-            <div align=center>
-              <img src="https://i.imgur.com/tSeZDyq.jpg" width="49.5%" class="responsive">
-              <img src="https://i.imgur.com/seLU75X.jpg" width="49.5%" class="responsive"><br>
-              <img src="https://i.imgur.com/i5qkAsS.jpg" width="100%" class="responsive">
-              <font class="note"><i>Ripley of Alien (1979),
+              <img src="https://i.imgur.com/tSeZDyq.jpg" width="49%" class="responsive">
+              <img src="https://i.imgur.com/seLU75X.jpg" width="49%" class="responsive"><br>
+              <img src="https://i.imgur.com/i5qkAsS.jpg" width="99%" class="responsive">
+              <div class="note">Ripley of Alien (1979),
                   Thomasin of The Witch (2015)
 
-                </i></font>
-            </div>
+                </div>
             <br>
             By looking at depictions of women through the lens of horror movie history, we can recognize the power of representation and how it interacts with society. The portrayal of women in horror movies is not much different from the way
             people treat women in real society. It can be said that it is the social structure of reality. There are certainly some people who compare female characters in old literature and old TV shows, saying how much better women’s social
@@ -125,11 +124,11 @@
             The Final Girls In Memories
             <h1>
               <div class="panel">
-                <div align=center>
-                  <img src="https://i.imgur.com/8txY5iL.jpg" width="100%" class="responsive">
-                  <font class="note"><i>Jess of Black Christmas (1974), Sally of The Texas Chain Saw Massacre (1974), Laurie of Halloween (1978), Ginny of Friday the 13th Part 2 (1981), Chris of The Last Slumber Party (1988)
-                    </i></font>
-                </div>
+                
+                  <img src="https://i.imgur.com/8txY5iL.jpg" width="99%" class="responsive">
+                  <div class="note"><i>Jess of Black Christmas (1974), Sally of The Texas Chain Saw Massacre (1974), Laurie of Halloween (1978), Ginny of Friday the 13th Part 2 (1981), Chris of The Last Slumber Party (1988)
+                  </i></div>
+
                 <br>
                 From the 1970s to late 1980, it was the prime of slasher horror films and the time when the ‘Final Girl' was highly active on the screen. ‘Final Girl’ refers to the last girl(s) or woman alive to confront the killer, the one who
                 left to tell the story. <i>The Texas Chain Saw Massacre</i>(1974), <i>Halloween</i>(1978), <i>Alien</i>(1979), <i>Friday the 13th</i>(1980), <i>A Nightmare on Elm street</i>(1984) and <i>Scream</i>(1996) are typical final girl
@@ -143,8 +142,8 @@
                 <br>
 
                 <div align=center>
-                  <img src="https://i.imgur.com/0B8cCKQ.jpg" width="100%" class="responsive">
-                  <font class="note"><i>Halloween (1978)</i></font>
+                  <img src="https://i.imgur.com/0B8cCKQ.jpg" width="99%" class="responsive">
+                  <div class="note"><i>Halloween (1978)</i></div>
                 </div>
                 <br>
                 The movie that best explains the Final Girl theory is <i>Halloween</i>, which can be said to have set the final girl formula with the most iconic Final Girl, Laurie. On October 31, 1963, on Halloween night in the small town of
@@ -156,8 +155,8 @@
                 with a view of Myers House, where Michael committed his first murder.
                 <br><br>
                 <div align=center>
-                  <img src="https://i.imgur.com/qAxyDtx.jpg" width="100%" class="responsive">
-                  <font class="note"><i>Halloween (1978)</i></font>
+                  <img src="https://i.imgur.com/qAxyDtx.jpg" width="99%" class="responsive">
+                  <div class="note"><i>Halloween (1978)</i></div>
                 </div>
                 <br>
                 The main character, Laurie, is a typical Final Girl of Clover. She is a character that
@@ -168,8 +167,8 @@
                 <blockquote><i>“Perhaps the most controversial aspect of Clover’s formulation has been the characterization of the Final Girl as a ‘male in drag’, which referes to her presumed masculine aggression and phallic agency.”</i>
                 </blockquote><br>
                 <div align=center>
-                  <img src="https://i.imgur.com/H7H92AO.jpg" width="100%" class="responsive">
-                  <font class="note"><i>Halloween (1978)</i></font>
+                  <img src="https://i.imgur.com/H7H92AO.jpg" width="99%" class="responsive">
+                  <div class="note"><i>Halloween (1978)</i></div>
                 </div>
                 <br>
                 <i>Halloween</i> ultimately erases all the ‘feminine’ characters like Annie and Linda and leave only Laurie, the only ‘unfeminine’ girl in the film. Laurie is a character with masculinity, and that is why her survival is
@@ -180,10 +179,10 @@
                 rules?<br>
                 <br><br>
                 <div align=center>
-                  <img src="https://i.imgur.com/l6KF5eb.jpg" width="49.5%" class="responsive">
-                  <img src="https://i.imgur.com/DVnJChT.jpg" width="49.5%" class="responsive">
+                  <img src="https://i.imgur.com/l6KF5eb.jpg" width="49%" class="responsive">
+                  <img src="https://i.imgur.com/DVnJChT.jpg" width="49%" class="responsive">
                   <br>
-                  <font class="note"><i>Thomasin of The Witch (2015), Erin of You’re Next (2011)</i></font>
+                  <div class="note"><i>Thomasin of The Witch (2015), Erin of You’re Next (2011)</i></div>
                 </div>
                 <br>
 
