--- a/index.html
+++ b/index.html
@@ -675,7 +675,11 @@
                                         <li id="foot21">http://news.cauon.net/news/articleView.html?idxno=31180<a href="#foot-21" aria-label="Back to content">↩</a></li>
 
                                       </ol>
+
                                     </footer>
+                                  <div class="name">
+                                    Eunjin Ahn, KABK 2021<br>
+                                    Under the supervision of Dirk Vis, Silvio Lorusso and Thomas Buxo</div>
 
       </div>
     </div>
