--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>I've Smelled the Blood, That Touches My Tongue.</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://kabk.github.io/go-theses-21-eunjin-ahn/style.css">
   <script src="jquery-3.5.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="javascript-file.js"></script>
+  <script src="https://kabk.github.io/go-theses-21-eunjin-ahn/javascript-file.js"></script>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔪</text></svg>">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
