--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>I've Smelled the Blood, That Touches My Tongue.</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://kabk.github.io/go-theses-21-eunjin-ahn/style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="jquery-3.5.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://kabk.github.io/go-theses-21-eunjin-ahn/javascript-file.js"></script>
@@ -15,7 +15,7 @@
 
 <body>
 
-  <button onclick="topFunction()" id="myBtn" title="Go to top">🔪</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="https://i.imgur.com/XhcjuIW.png"></button>
   <script>
     //Get the button
     var mybutton = document.getElementById("myBtn");
@@ -41,17 +41,11 @@
   </script>
   <!-- partial:index.partial.html -->
   <div class="left">
-
-    <main class="halloctober p-flex">
-      <div class="halloctober__banner p-flex">
-        <h1 class="typo">I’ve Smelled the Blood, That Touches My Tongue.</h1>
-        <div class="fog p-circle"></div>
+        I’ve Smelled the Blood, That Touches My Tongue.
       </div>
-    </main>
-  </div>
   <div class="middle">
     <div class="content">
-      <h1 class="flip"><b>Abstract</b>
+      <h1 class="flip"><b><i>Abstract</i></b>
         <h1>
           <div class="panel">
             <img src="https://i.imgur.com/PiQQBWE.jpg" width="99%" class="responsive"><br>
@@ -68,7 +62,7 @@
             <br>
           </div>
           <h1 class="flip">
-            <b>Introduction</b>
+            <b><i>Introduction</i></b>
             <h1>
               <div class="panel">
 
@@ -124,7 +118,7 @@
 
 
               <h1 class="flip">
-                <b>The Final Girls In Memories</b>
+                <b><i>The Final Girls In Memories</i></b>
                 <h1>
                   <div class="panel">
 
@@ -215,7 +209,7 @@
 
 
                   <h1 class="flip">
-                    <b>Revenge, Somewhere Between<br>Horrifying and Empowering</b>
+                    <b><i>Revenge, Somewhere Between<br>Horrifying and Empowering</i></b>
                     <h1>
                       <div class="panel">
 
@@ -315,7 +309,7 @@
 
 
                       <h1 class="flip">
-                        <b>In the Name of Mother</b>
+                        <b><i>In the Name of Mother</i></b>
                         <h1>
                           <div class="panel">
                             <img src="https://i.imgur.com/UR70GQv.jpg" width="99%" class="responsive">
@@ -424,7 +418,7 @@
                           </div>
 
                           <h1 class="flip">
-                            <b>Intolerable Monstrous Instinct</b>
+                            <b><i>Intolerable Monstrous Instinct</i></b>
                             <h1>
                               <div class="panel">
                                 <img src="https://i.imgur.com/HbMUwdL.jpg" width="99%" class="responsive">
@@ -548,7 +542,7 @@
 
 
                               <h1 class="flip">
-                                <b>Conclusion</b>
+                                <b><i>Conclusion</i></b>
                                 <h1>
                                   <div class="panel">
 
@@ -557,6 +551,7 @@
                                       <i>All Cheerleaders Die</i>(2013)
                                     </div>
                                     <br>
+
                                     One of the reasons we are fascinated by horror movies is that we face unethical and immorality that are taboo in society. We can experience the taboos and unethical behaviors defined through social and moral
                                     oppressions indirectly through horror movies and feel free. But we don’t just feel liberated and pleasant. It is possible to understand what is unethical and immoral and what the price comes when they collapse.
                                     However, this is only true for those who have a good sense of ethical consciousness. It is impossible that everyone’s level of ethical consciousness is exemplary, and creators should keep it in their mind. The
