--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="jquery-3.5.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://kabk.github.io/go-theses-21-eunjin-ahn/javascript-file.js"></script>
-  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XhcjuIW.png">
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/wWXkbDW.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
