--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="https://i.imgur.com/XhcjuIW.png"></button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="https://i.imgur.com/XhcjuIW.png" width="100%"></button>
   <script>
     //Get the button
     var mybutton = document.getElementById("myBtn");
